# cs6963

assignment1/: .gitignore  Makefile  README.md  Sudoku.hi  generator  generator.hi  generator.hs  solver  solver.hi  solver.hs  sudoku.hs
assignment1/boards/: 1x1.txt  1x2.txt  3x2.txt  3x3-1.txt  3x3-2.txt  3x3-unsolvable.txt  4x1.txt  empty-2x2.txt  empty-3x3.txt  empty-4x4.txt  solved-1x2.txt  solved-3x2.txt  unsolvable-1x2.txt  unsolvable-filled-1x2.txt
assignment1/wip_boards/: empty-5x5.txt
project/: TODO.md  proxy.cabal
project/app/: Echo.hs  Proxy.hs
project/src/: BufferedSocket.hs  MatchAction.hs  Protocol.hs  TCPServer.hs
santorini-player/: Main.hs  Makefile  README.md  Santorini.hs  Test.hs  santorini-player.cabal
