cabal-version:      3.4
name:               proxy
version:            0.1.0.0

license:            NONE
author:             Emerson Ford
maintainer:         emersontford@gmail.com

common shared-properties
    build-depends:
      base ^>=4.14.1.0,
      bytestring ^>=0.11.1.0,
      network ^>=3.1.2.1,
      containers ^>=0.6.4.1,
      text ^>=1.2.4.1,
      proxy

    default-language: Haskell2010

library
    exposed-modules:
      TCPServer
      Protocol
      BufferedSocket
      MatchAction

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    build-depends:
      base ^>=4.14.1.0,
      network ^>=3.1.2.1,
      bytestring ^>=0.11.1.0,
      mtl ^>=2.2.2,
      transformers ^>=0.5.6.2,
      containers ^>=0.6.4.1,
      text ^>=1.2.4.1,
      attoparsec ^>=0.14.1

    hs-source-dirs:   src
    default-language: Haskell2010

executable proxy
    import: shared-properties
    main-is:          Proxy.hs

    hs-source-dirs:   app

executable echo-server
    import: shared-properties
    main-is:          Echo.hs

    hs-source-dirs:   app
