cabal-version:      2.4
name:               santorini-player
version:            0.1.0.0

license:            NONE
author:             Emerson Ford
maintainer:         emersontford@gmail.com

extra-source-files:
    README.md

executable santorini-player
    main-is: Main.hs

    other-modules: Santorini

    build-depends:
        base ^>=4.14.1.0,
        containers ^>=0.6.4.1,
        aeson ^>=1.5.6.0,
        bytestring ^>=0.10.12.0,
        vector ^>=0.12.2.0

    ghc-options: -O2
    default-language: Haskell2010

test-suite test
    type: exitcode-stdio-1.0

    main-is: Test.hs

    other-modules: Santorini

    build-depends:
        base ^>=4.14.1.0,
        hspec ^>=2.7.8,
        QuickCheck ^>=2.14.2,
        bytestring ^>=0.10.12.0,
        aeson ^>=1.5.6.0,
        vector ^>=0.12.2.0,
        raw-strings-qq ^>=1.1,
        parallel ^>=3.2.2.0

    ghc-options: -O3 -threaded -rtsopts "-with-rtsopts=-N8"
    default-language: Haskell2010
